--- a/FE_Onboarding/src/Global/Translations/es/global.json
+++ b/FE_Onboarding/src/Global/Translations/es/global.json
@@ -1,6 +1,6 @@
 {
   "sidebar": {
-    "home": "Inicio",
+    "home": "Home",
     "countries": "Países",
     "staff": "Personal",
     "customers": "Clientes",
@@ -22,7 +22,7 @@
     },
     "confirmDelete": "¿Estás seguro de que quieres eliminar este país?",
     "deleting": "Eliminando país...",
-    "deleteSuccess": "País eliminado con éxito!",
+    "deleteSuccess": "¡País eliminado con éxito!",
     "deleteError": "¡No se pudo eliminar el país!"
   },
   "customers": {
@@ -30,18 +30,34 @@
     "createButton": "Crear Nuevo Cliente",
     "table": {
       "id": "ID",
-      "nombre": "Nombre",
+      "name": "Nombre",
       "email": "Correo Electrónico",
-      "telefono": "Teléfono",
-      "direccion": "Dirección"
+      "phone": "Teléfono",
+      "address": "Dirección"
     },
     "form": {
       "editTitle": "Editar Cliente",
       "createTitle": "Crear Nuevo Cliente",
-      "nombreLabel": "Nombre",
+      "nameLabel": "Nombre",
       "emailLabel": "Correo Electrónico",
-      "telefonoLabel": "Teléfono",
-      "direccionLabel": "Dirección"
+      "phoneLabel": "Teléfono",
+      "addressLabel": "Dirección"
+    },
+    "confirmDelete": "¿Estás seguro de que quieres eliminar este cliente?",
+    "deleting": "Eliminando cliente...",
+    "deleteSuccess": "¡Cliente eliminado con éxito!",
+    "deleteError": "¡No se pudo eliminar el cliente!",
+    "formValidation": {
+      "nameRequired": "El nombre es obligatorio",
+      "nameMinLength": "Debe tener al menos 3 caracteres",
+      "nameMaxLength": "No puede superar 50 caracteres",
+      "nameInvalidChars": "Solo se permiten letras y espacios",
+      "emailRequired": "El correo electrónico es obligatorio",
+      "emailInvalid": "El correo electrónico no es válido",
+      "phoneRequired": "El teléfono es obligatorio",
+      "phoneInvalid": "El teléfono debe tener 8 dígitos numéricos",
+      "addressRequired": "La dirección es obligatoria",
+      "addressMinLength": "La dirección debe tener al menos 5 caracteres"
     }
   },
   "services": {
@@ -93,8 +109,8 @@
     "cancel": "Cancelar",
     "updating": "Actualizando...",
     "creating": "Creando...",
-    "updateSuccess": "Elemento actualizado con éxito!",
-    "createSuccess": "Elemento creado con éxito!",
+    "updateSuccess": "¡Elemento actualizado con éxito!",
+    "createSuccess": "¡Elemento creado con éxito!",
     "genericError": "¡Ha ocurrido un error!",
     "confirmAction": "Confirmar Acción",
     "noData": "No hay datos disponibles.",
