--- a/FE_Onboarding/src/Global/Translations/es/global.json
+++ b/FE_Onboarding/src/Global/Translations/es/global.json
@@ -130,6 +130,7 @@
     "previous": "Anterior",
     "next": "Siguiente",
     "itemsPerPage": "Registros por página",
-    "logout": "Cerrar Sesión"
+    "logout": "Cerrar Sesión",
+    "selectOption": "Seleccionar Opción"
   }
 }
