--- a/FE_Onboarding/src/Global/Translations/en/global.json
+++ b/FE_Onboarding/src/Global/Translations/en/global.json
@@ -130,6 +130,7 @@
     "previous": "Previous",
     "next": "Next",
     "itemsPerPage": "Records per page",
-    "logout": "Logout"
+    "logout": "Logout",
+    "selectOption": "Select Option"
   }
 }
